<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->

    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">Sticker Pack</item>
        <item quantity="other">Sticker Packs</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Info</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.
     \n   \n OR it was cancled by user</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <!-- Content description indicating the sticker pack is an animated pack -->
    <string name="sticker_pack_animation_indicator" tools:ignore="MissingTranslation">Animated sticker pack</string>
    <!-- text we display at the end of sticker pack details page showing that users can tap sticker to see bigger version -->
    <string name="sticker_pack_details_tap_to_preview" tools:ignore="MissingTranslation">Tap to preview sticker</string>



//==========================rate diloge==========
    <string name="rate_dialog_title" translatable="false">Rate this app</string>
    <string name="rate_dialog_message" translatable="false">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok" translatable="false">Rate It Now</string>
    <string name="rate_dialog_cancel" translatable="false">Remind Me Later</string>
    <string name="rate_dialog_no" translatable="false">No, Thanks</string>
    //================================================



    <string name="shareApp" translatable="false">Share App</string>

    <string name="rateme" translatable="false">Rate Me</string>
    <string name="contactme" translatable="false">Contact Me</string>
    <string name="toastexitmsg">Exit</string>

    //===============fun =============================
    <string name="about_Toast" translatable="false">kya dikhau about me</string>
    <string name="no_ads" translatable="false"> ✨Luck you NO ads✨</string>
    <string name="surprise_open_toast" translatable="false"> =====# aap ka kat gya 😜 #=====  </string>
    <string name="surprise_already_opened" translatable="false"> surprise already opened :) </string>
    <string name="internet_saved_you_from_ad" translatable="false">😩 your slow internet saved you from ad</string>



    //=======================================================================================
    //========================       app details        =====================================
    //========================================================================================
    <string name="app_name" translatable="false">cartoon sticker for WA </string>
    <string name="appid" translatable="false">com.jkstudio.jkcartoon</string> //manual edit
    <string name="app_splash_name" translatable="false">cartoon sticker for WA</string>
    <string name="version_name" translatable="false">1.11</string>

    <string name="admob_appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    //==== test >>> ca-app-pub-3940256099942544~3347511713
    //==== my >>>>> ca-app-pub-7205492089564900~2638344193
    <string name="adunitI" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    //=== test >>>> ca-app-pub-3940256099942544/1033173712
    //=== my >>>>>> ca-app-pub-7205492089564900/8287446060

    <string name="playstorpage_link" translatable="false">https://play.google.com/store/apps/dev?id=7683473458812702011</string>
    <string name="review_link" translatable="false">Market://dev?id=7683473458812702011</string>
    <string name="playstore_open_page" translatable="false">Market://dev?id=7683473458812702011</string>
    <string name="privcy_link" translatable="false">https://jayraj2610.github.io/APP-TC-and-PP-cartoon/</string>
    <string name="terms_link" translatable="false">otherapps_list</string>
    <string name="title_activity_otherapps_list" translatable="false">otherapps_list</string>

    <string name="share_app_msg" translatable="false">
        \n hey TRY this amazing sticker pack 😍😍😍\n \n

        created by ✨jkstudio✨ \n
        .
        . \n
    </string>
    <string name="share_app_link_msg" translatable="false">https://play.google.com/store/apps/details?id=com.jkstudio.jkcartoon</string>





    //=======================================================================================
    //========================================================================================



    <string-array name="games_spinner_array">
        <item>ludo</item>
        <item>pubg</item>
        <item>valorant</item>
        <item>csgo</item>
        <item>freefier</item>
        <item>classic</item>
        <item>among us</item>
        <item>pubg gun</item>
        <item>fortnight</item>
        <item>COC</item>
    </string-array>

    <string-array name="actor_spinner_array">
        <item>akhshay kumar</item>
        <item>amitabh bacchn</item>
        <item>baburav</item>
        <item>kachra seth</item>
        <item>nana patekr</item>
        <item>navazuddin</item>
        <item>rajpal yadav</item>
        <item>salman bhai</item>
        <item>sanjay datt</item>
        <item>shyam</item>
        <item>virus</item>
        <item>vasuli bhai</item>
        <item>COC</item>
    </string-array>

    <string-array name="cartoon_spinner_array">
        <item>doremon</item>
        <item>doremon anim</item>
        <item>sinchan</item>
        <item>sinchan anim</item>
        <item>boss baby</item>
        <item>tom and jerry</item>
        <item>oggy</item>
        <item>mr.bean</item>
        <item>mix</item>
        <item>aur btao</item>
    </string-array>

    <string-array name="movie_spinner_array">
        <item>dhmal</item>
        <item>golmal</item>
        <item>hera feri</item>
        <item>munna bhai</item>
        <item>pk</item>
        <item>welcome</item>
        <item>3idiot</item>

    </string-array>

    <string-array name="youtuber_spinner_array">
        <item>carry minati</item>
        <item>aakash gupta</item>
        <item>anubhav</item>
        <item>zakir khan</item>
        <item>ashis c</item>
        <item>bhau</item>
        <item>2 foreiners</item>
        <item>kapil sharma</item>
        <item>titu mama</item>
        <item>gulati</item>
        <item>standup mix</item>
    </string-array>

    <string-array name="imoji_spinner_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>

    <string-array name="meme_spinner_array">
        <item>mirzapur-1</item>
        <item>mirzapur-2</item>
        <item>ambani</item>
        <item>JETHALAL</item>
        <item>DOGGO</item>
        <item>TRENDING-1</item>
        <item>TRENDING-2</item>
        <item>POLITICIAN</item>
    </string-array>

    <string-array name="greetings_spinner_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>







</resources>
