<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="@dimen/preview_side_margin"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/preview_side_margin"
        android:layout_marginLeft="@dimen/preview_side_margin"
        android:layout_marginEnd="@dimen/preview_side_margin"
        android:layout_marginRight="@dimen/preview_side_margin"
        android:layout_marginBottom="5dp">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="360dp"
            android:layout_height="112dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="370dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/orangedark"
                app:cardCornerRadius="15dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_view_item_category_shadow"
                        android:layout_width="269dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="80dp"
                        android:fontFamily="@font/audiowide"
                        android:gravity="left|center"
                        android:text="jimmy"
                        android:textAlignment="center"
                        android:textColor="#1affffff"
                        android:textSize="76dp" />

                    <RelativeLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:elevation="1dp"
                        android:gravity="center">

                        <RelativeLayout
                            android:layout_width="90dp"
                            android:layout_height="75dp"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="false"
                            android:rotation="145"
                            android:visibility="visible">

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="95dp"
                            android:layout_height="70dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/ic_egg"
                            android:rotation="45" />

                        <RelativeLayout
                            android:layout_width="75dp"
                            android:layout_height="90dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_egg"
                            android:rotation="15"
                            android:visibility="visible" />

                        <RelativeLayout
                            android:layout_width="75dp"
                            android:layout_height="90dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_egg"
                            android:rotation="125"
                            android:visibility="visible" />

                        <RelativeLayout
                            android:layout_width="95dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_egg">

                            <ImageView
                                android:id="@+id/tray_image"
                                android:layout_width="99dp"
                                android:layout_height="97dp"
                                android:contentDescription="@string/tray_image_content_description"
                                android:src="@color/colorAccent"
                                tools:src="@color/orangedark" />
                        </RelativeLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/pack_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="12dp"

                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/audiowide"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/text_view_item_category_shadow"
                        tools:text="Pack Name" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pack_name"
                        android:layout_alignParentEnd="true"

                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="17dp"
                        android:fontFamily="@font/audiowide"
                        tools:text="Author" />

                    <TextView
                        android:id="@+id/pack_size"
                        android:layout_width="78dp"
                        android:layout_height="26dp"
                        android:layout_below="@+id/author"

                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="21dp"
                        android:fontFamily="sans-serif"
                        tools:text="Size" />

                    <ImageView
                        android:id="@+id/sticker_pack_animation_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="14dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="28dp"
                        android:layout_toStartOf="@+id/pack_size"
                        android:contentDescription="@string/sticker_pack_animation_indicator"
                        android:src="@drawable/animated_pack_indicator"
                        app:tint="@color/animatedStickerIndicator" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.jkstudio.jkcartoon.BottomFadingRecyclerView
            android:id="@+id/sticker_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="@dimen/fading_edge_length"
            android:paddingStart="@dimen/preview_side_margin"
            android:paddingLeft="@dimen/preview_side_margin"
            android:paddingEnd="@dimen/preview_side_margin"
            android:paddingRight="@dimen/preview_side_margin"
            android:requiresFadingEdge="vertical" />


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sticker_details_expanded_sticker"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:visibility="invisible" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#000000"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/preview_side_margin"
        android:layout_marginLeft="@dimen/preview_side_margin"
        android:layout_marginEnd="@dimen/preview_side_margin"
        android:layout_marginRight="@dimen/preview_side_margin"
        android:minHeight="60dp">

        <TextView
            android:id="@+id/already_added_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/details_pack_already_added"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/add_to_whatsapp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_green"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical">

                <TextView
                    style="@style/StickerPreviewButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:drawableStart="@drawable/sticker_3rdparty_wa"
                    android:drawableLeft="@drawable/sticker_3rdparty_wa"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:foreground="@android:color/transparent"
                    android:text="@string/add_to_whatsapp" />


            </FrameLayout>

            <TextView
                android:id="@+id/sticker_pack_details_tap_to_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/sticker_pack_details_tap_to_preview" />
        </LinearLayout>


    </FrameLayout>
</LinearLayout>